prevent flex-wrap on fields

--- a/packages/block-library/field/style.scss
+++ b/packages/block-library/field/style.scss
@@ -12,6 +12,7 @@
 	}
 
 	&.is-layout-flex.is-style-inline {
+		flex-wrap: nowrap;
 		flex-direction: row;
 		align-content: center;
 	}
